client/src/components/views/design/customizer-ui/CustomizerUi.css
.design__customizer {
    padding: 5rem 4rem;
    border-top: 1px solid var(--light-grey);
    overflow-y: scroll;
}

.design__customizer__form__title {
    margin-bottom: 1rem;
}

.title--note-included {
    margin-bottom: 0;
}

.design__customizer__form__title-note {
    display: block;
    margin-bottom: 1rem;
}

.design__customizer__form__controls-container-outer-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 4rem;
    align-items: flex-end;
    justify-content: space-between;
}

/* General form input container parent class */
.design__customizer__form__controls-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 1.5rem;
}

.design__customizer__form__label,
.design__customizer__form__input {
    font-size: var(--base-fz);
}

.design__customizer__form__label {
    display: inline-block;
    margin-bottom: .25rem;
}

.design__customizer__form__label-note {
    color: var(--dark-grey);
}

.design__customizer__form__input {
    padding: .5rem;
    border: none;
    border-radius: 4px;
    background-color: var(--light-grey);
    font-size: 1rem;
}

/* Utility class */
.col--half-width {
    max-width: 50%;
}

.design__customizer__form__btn {
    padding: .5rem 1.25rem;
    cursor: pointer;
    border: none;
    border-radius: 4px;
    background-color: var(--very-dark-indigo);
    color: var(--very-light-indigo);
    letter-spacing: .08em;
    text-transform: uppercase;
    font-weight: 700;
}

/* Only radio btns */
.radio-btn-controls-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 2rem;
}

.radio-label {
    display: inline-flex;
    align-items: center;
    cursor: pointer;
}

.sr-only {
    /* Visually hidden, but sr-accessible */
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    width: 1px;
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
}

.radio-btn--fake {
    /* Prevent squishing on smaller widths */
    flex-shrink: 0;

    width: 1.25em;
    height: 1.25em;
    padding: .125em;
    border: 2px solid var(--light-indigo);
    border-radius: 50%;
    margin-right: .5em;
}

.radio-btn--fake::after {
    content: "";
    width: 100%;
    height: 100%;
    display: block;
    border-radius: 50%;
    background-color: var(--very-dark-indigo);

    transform: scale(0);
    transition: transform 120ms ease-in-out;
}

.radio-btn:checked + .radio-btn--fake::after {
    transform: scale(1);
}

/* Battery pack checkbox styling */
.battery-checkbox-label {
    display: inline-flex;
    align-items: flex-start;
    cursor: pointer;
}

.battery-checkbox--fake {
    /* Vert and horiz alignment of checkmark symbol within box */
    display: flex;
    align-items: center;
    justify-content: center;
    /* Prevent squishing on smaller widths */
    flex-shrink: 0;

    margin-right: 1rem;
    width: 1.25em;
    height: 1.25em;
    padding: .125em;
    border: 2px solid #ccc;
    border-radius: 4px;
}

.battery-checkbox--fake::after {
    /* Unicode check symbol */
    content: "\2714";
    color: #fff;

    transform: scale(.75);
    transition: transform 120ms ease-in-out;
}

/* When the checkbox is checked, select the adjacent fake checkbox ::after elem */
.battery-checkbox:checked + .battery-checkbox--fake {
    background-color: var(--very-dark-indigo);
    border-color: var(--very-dark-indigo);
}

.battery-checkbox:checked + .battery-checkbox--fake::after {
    transform: scale(1);
}

.grand-total {
    display: inline-block;
    margin-left: 1rem;
    color: var(--dark-indigo);
}

.design__customizer__form__submit-btn {
    margin-top: 2rem;
    margin-bottom: 1rem;
    padding: .75rem 1.5rem;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    background-color: var(--dark-indigo);
    color: var(--very-light-indigo);
    font-size: 1rem;
    font-weight: 700;
    letter-spacing: .08em;
    text-transform: uppercase;

    transition: opacity 120ms ease;
}

.design__customizer__form__submit-btn:disabled {
    opacity: 0.5;
    cursor: default;
}

@media screen and (max-width: 70em) {
    .design__customizer {
        overflow-y: initial;
    }
}

@media screen and (max-width: 25em) {
    .design__customizer {
        padding: 3rem 2rem;
    }
}

